<resources>
    <string name="app_name">AvaliadorPolitico</string>
    <string name="access">Acesse</string>
    <string name="app_name2">Projeto \nPolítica \nLimpa</string>
    <string name="app_name2_no_break">Projeto Política Limpa</string>
    <string name="access_with_google">Acessar com o Google</string>
    <string name="enter">Entrar</string>
    <string name="cancel">Cancelar</string>
    <string name="register">Cadastre-se</string>
    <string name="register2">Cadastrar</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="forgot_password2">Esqueceu a Senha?</string>
    <string name="email_or_cpf">Email ou Cpf</string>
    <string name="next">Avançar</string>
    <string name="password">Senha:</string>
    <string name="password_no_dot">Senha</string>
    <string name="user">Usuário:</string>
    <string name="user_register">Cadastro de Usuários</string>
    <string name="name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="cpf">Cpf</string>
    <string name="email">Email</string>
    <string name="politician_profile">Perfil de Político</string>
    <string name="change_password">Alterar Senha</string>
    <string name="old_password">Senha Antiga</string>
    <string name="new_password">Nova Senha</string>
    <string name="repeat_password">Repita a Senha</string>
    <string name="change">Alterar</string>
    <string name="username">username</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_title_attention">Atenção</string>
    <string name="please_inform_username">Por favor, informe o nome do usuário na tela atual.</string>
    <string name="please_inform_email_or_cpf">Por favor, informe o seu email or cpf antes.</string>
    <string name="please_inform_email_or_cpf_invalid_message">Email ou Cpf inválido! Por favor, informe novamente o valor e tente novamente.</string>
    <string name="political_ranking">Ranking de Políticos</string>
    <string name="_1">1</string>
    <string name="politician_name">Nome do Político</string>
    <string name="complete_name">Nome Completo:</string>
    <string name="birth_date">Data de Nascimento:</string>
    <string name="birth_city">Município de Nascimento:</string>
    <string name="gender">Gênero:</string>
    <string name="civil_state">Estado Civil:</string>
    <string name="education_level">Grau de Instrução:</string>
    <string name="profession">Profissão:</string>
    <string name="current_party">Partido Atual:</string>
    <string name="political_promises">Promessas Políticas</string>
    <string name="political_promises_underlined"><u>Promessas Políticas</u></string>
    <string name="political_profile_underlined"><u>Perfil Político</u></string>
    <string name="political_profile">Perfil Político</string>
    <string name="observations">Observações:</string>
    <string name="jair_bolsonaro">\nJAIR\nBOLSONARO</string>
    <string name="promise_title">Título de Promessa</string>
    <string name="feed">Feed de Notícias</string>
    <string name="database">Base de Dados</string>
    <string name="politician_accompanied">Políticos Acompanhados</string>
    <string name="scheduler">Agendador</string>
    <string name="vote_prediction">Predição de Votos</string>
    <string name="create_public_petition">Criar Petição Pública</string>
    <string name="change_register">Alterar Cadastro</string>
    <string name="leave_profile">Sair do Perfil</string>
</resources>